<resources>
    <string name="app_name">AppGithubUser</string>

    <string name="users_search">Github User\'s Search</string>
    <string name="search_hint">Search Username</string>
    <string name="search">Search</string>
    <string name="about">About</string>
    <string name="no_data">No Data</string>
    <string name="detail_user">Detail User</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="company">Company:\u0020</string>
    <string name="location">Location:\u0020</string>
    <string name="blog">Web:\u0020</string>
    <string name="repository">Repository</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
</resources>